Added bootstrap and local css file

--- a/index.html
+++ b/index.html
@@ -1,19 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Simon: A Memory Game</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 </head>
+
 <body>
-    <h1>Simon</h1>
-    <button>New Game</button>
-    <button>How To Play</button>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <p>High Score: </p>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1>Simon</h1>
+                <button>New Game</button>
+                <button>How To Play</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="green-button"></div>
+                <div class="red-button"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="yellow-button"></div>
+                <div class="blue-button"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <p>High Score: </p>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
 </body>
+
 </html>
