--- a/index.html
+++ b/index.html
@@ -13,31 +13,35 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col d-flex justify-content-center">
                 <h1>Simon</h1>
                 <button>New Game</button>
                 <button>How To Play</button>
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col-6 p-0 d-flex justify-content-end">
                 <div class="green-button"></div>
+            </div>
+            <div class="col-6 p-0 d-flex justify-content-start">
                 <div class="red-button"></div>
             </div>
         </div>
+
         <div class="row">
-            <div class="col">
+            <div class="col-6 p-0 d-flex justify-content-end">
                 <div class="yellow-button"></div>
+            </div>
+            <div class="col-6 p-0 d-flex justify-content-start">
                 <div class="blue-button"></div>
             </div>
         </div>
+
         <div class="row">
-            <div class="col">
+            <div class="col d-flex justify-content-center">
                 <p>High Score: </p>
             </div>
         </div>
-    </div>
-    </div>
     </div>
 </body>
 
