--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="assets/js/simon.js"></script>
 </body>
 
 </html>
