--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         </div>
         <div class="row">
             <div class="col-6 p-0 d-flex justify-content-end">
-                <div id="green-button"></div>
+                <div class="green-button"></div>
             </div>
             <div class="col-6 p-0 d-flex justify-content-start">
-                <div id="red-button"></div>
+                <div class="red-button"></div>
             </div>
         </div>
 
         <div class="row">
             <div class="col-6 p-0 d-flex justify-content-end">
-                <div id="yellow-button"></div>
+                <div class="yellow-button"></div>
             </div>
             <div class="col-6 p-0 d-flex justify-content-start">
-                <div id="blue-button"></div>
+                <div class="blue-button"></div>
             </div>
         </div>
 
