Added id to new game button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col d-flex justify-content-center">
                 <h1>Simon</h1>
-                <button>New Game</button>
+                <button id="new-game-button">New Game</button>
                 <button>How To Play</button>
             </div>
         </div>
