--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
         </div>
 
         <div class="row">
-            <div class="col d-flex justify-content-center">
+            <div class="col d-flex justify-content-around">
+                <p>Current Score: </p>
                 <p>High Score: </p>
+                
             </div>
         </div>
     </div>
