Added id tags to high and current score

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
         <div class="row">
             <div class="col d-flex justify-content-around">
-                <p>Current Score: </p>
-                <p>High Score: </p>
+                <p id="current-score">Current Score: </p>
+                <p id="high-score">High Score: </p>
                 
             </div>
         </div>
