Moved current/high score inside its own span element

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
         <div class="row">
             <div class="col d-flex justify-content-around">
-                <p id="current-score">Current Score: </p>
-                <p id="high-score">High Score: </p>
+                <p>Current Score: <span id="current-score"></span></p>
+                <p>High Score: <span id="high-score"></span></p>
                 
             </div>
         </div>
