--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
                 
             </div>
         </div>
+        
+        <div class="row">
+            <div class="col d-flex justify-content-center">
+                <p id="game-over"></p>
+            </div>
+        </div>
     </div>
     <script type="text/javascript" src="assets/js/simon.js"></script>
 </body>
