Added high score alert tag

--- a/index.html
+++ b/index.html
@@ -41,13 +41,19 @@
             <div class="col d-flex justify-content-around">
                 <p>Current Score: <span id="current-score">0</span></p>
                 <p>High Score: <span id="high-score">0</span></p>
-                
+
             </div>
         </div>
-        
+
         <div class="row">
             <div class="col d-flex justify-content-center">
                 <p id="game-over"></p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col d-flex justify-content-center">
+                <p class="hs-alert"></p>
             </div>
         </div>
     </div>
