--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div class="row">
             <div class="col d-flex justify-content-center">
-                <p class="hs-alert"></p>
+                <p id="hs-alert"></p>
             </div>
         </div>
     </div>
