--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
         <div class="row">
             <div class="col d-flex justify-content-center">
                 <h1>Simon</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col d-flex justify-content-around">
                 <button id="new-game-button">New Game</button>
                 <button>How To Play</button>
             </div>
         </div>
+
+    </div>
+
+    <div class="container">
         <div class="row">
             <div class="col-6 p-0 d-flex justify-content-end">
                 <div class="green-button"></div>
@@ -36,7 +44,9 @@
                 <div class="blue-button"></div>
             </div>
         </div>
+    </div>
 
+    <div class="container">
         <div class="row">
             <div class="col d-flex justify-content-around">
                 <p>Current Score: <span id="current-score">0</span></p>
@@ -57,6 +67,7 @@
             </div>
         </div>
     </div>
+
     <script type="text/javascript" src="assets/js/simon.js"></script>
 </body>
 
