Added position to button classes

--- a/index.html
+++ b/index.html
@@ -61,16 +61,18 @@
 
 
         <div class="row">
-            <div class="col-6 p-0 d-flex justify-content-end">
+            <div class="col-6 p-0">
 
-                <div class="green-button"></div>
+                <div id="game-board">
+                    <div class="green-button"></div>
 
-                <div class="red-button"></div>
+                    <div class="red-button"></div>
 
-                <div class="yellow-button"></div>
+                    <div class="yellow-button"></div>
 
-                <div class="blue-button"></div>
+                    <div class="blue-button"></div>
 
+                </div>
             </div>
         </div>
 
