Changed units from vw to % to scale better

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
         <div class="row">
-            <div class="col-6 p-0">
+            <div class="col p-0 no-gutters">
 
                 <div id="game-board">
                     <div class="green-button"></div>
