Changed references to old classes in html

--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
             <div class="col p-0 no-gutters">
 
                 <div id="game-board">
-                    <div class="green-button"></div>
+                    
+                    <div class="simon-button top-left green"></div>
 
-                    <div class="red-button"></div>
+                    <div class="simon-button top-right red"></div>
 
-                    <div class="yellow-button"></div>
+                    <div class="simon-button bottom-left yellow"></div>
 
-                    <div class="blue-button"></div>
+                    <div class="simon-button bottom-right blue"></div>
 
                 </div>
             </div>
