--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="row">
             <div class="col d-flex justify-content-center">
-                <h1 id="simon-header">Simon</h1>
+                <h1 id="simon-header">SIMON</h1>
             </div>
         </div>
 
@@ -29,9 +29,9 @@
         <div class="row">
             <div class="col d-flex justify-content-around">
 
-                <button id="new-game-button" class="btn">New Game</button>
+                <button id="new-game-button" class="btn btn-lg">New Game</button>
 
-                <button id="how-to-play-button" type="button" class="btn" data-toggle="modal" data-target="#howToPlay">How To Play</button>
+                <button id="how-to-play-button" type="button" class="btn btn-lg" data-toggle="modal" data-target="#howToPlay">How To Play</button>
 
                 <!-- Code for Modal -->
                 <div class="modal fade" id="howToPlay" tabindex="-1" role="dialog" aria-labelledby="howToPlayLabel" aria-hidden="true">
@@ -55,7 +55,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> <!-- end code for modal -->
             </div>
         </div>
 
