Made buttons into info buttons

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <div class="row">
             <div class="col d-flex justify-content-around">
 
-                <button id="new-game-button" class="btn btn-lg">New Game</button>
+                <button id="new-game-button" class="btn btn-lg btn-info">New Game</button>
 
-                <button id="how-to-play-button" type="button" class="btn btn-lg" data-toggle="modal" data-target="#howToPlay">How To Play</button>
+                <button id="how-to-play-button" type="button" class="btn btn-lg btn-info" data-toggle="modal" data-target="#howToPlay">How To Play</button>
 
                 <!-- Code for Modal -->
                 <div class="modal fade" id="howToPlay" tabindex="-1" role="dialog" aria-labelledby="howToPlayLabel" aria-hidden="true">
