Moved score spans into their own row as paragraphs

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                             </div>
                         </div>
                     </div>
-                </div> <!-- end code for modal -->
+                </div>
+                <!-- end code for modal -->
             </div>
         </div>
 
@@ -64,7 +65,7 @@
             <div class="col p-0 no-gutters">
 
                 <div id="game-board">
-                    
+
                     <div class="simon-button top-left green"></div>
 
                     <div class="simon-button top-right red"></div>
@@ -80,9 +81,18 @@
 
         <div class="row">
             <div class="col d-flex justify-content-around">
-                <p class="score-text">Current Score: <span id="current-score">0</span></p>
-                <p class="score-text">High Score: <span id="high-score">0</span></p>
+                <p class="score-text">Current Score:</p>
+                <p class="score-text">High Score:</p>
 
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="col d-flex justify-content-around">
+                <p id="current-score">0</p>
+                 <p id="high-score">0</p>
+                
             </div>
         </div>
 
