Put in new max values for game board, removed media query

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
         <div class="row">
-            <div class="col d-flex justify-content-around">
+            <div class="col d-flex justify-content-center">
 
                 <button id="new-game-button" class="btn btn-lg btn-info">New Game</button>
 
