--- a/index.html
+++ b/index.html
@@ -75,26 +75,30 @@
                     <div class="simon-button bottom-right blue"></div>
 
                     <p id="game-over"></p>
-                    
+
                     <p id="hs-alert"></p>
-                    
+
                 </div>
             </div>
         </div>
 
 
-        <div class="row">
-            <div class="col d-flex justify-content-around">
+        <div class="row justify-content-center">
+            <div class="col-5 col-md-4 col-lg-3 col-xl-2 d-flex justify-content-center">
                 <p class="score-text">Current Score:</p>
+            </div>
+            <div class="col-5 col-md-4 col-lg-3 col-xl-2 d-flex justify-content-center">
                 <p class="score-text">High Score:</p>
 
             </div>
         </div>
 
 
-        <div class="row">
-            <div class="col d-flex justify-content-around">
+        <div class="row justify-content-center">
+            <div class="col-5 col-md-4 col-lg-3 col-xl-2 d-flex justify-content-center">
                 <p id="current-score">0</p>
+            </div>
+            <div class="col-5 col-md-4 col-lg-3 col-xl-2 d-flex justify-content-center">
                 <p id="high-score">0</p>
 
             </div>
